Création du Dockerfile avec JRE (Exo 5, 7)